<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stavro_xhardha.fcbarcelonashqip.TableFragment">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/table_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:orientation="horizontal"
                android:padding="@dimen/global_unit_smaller_x"
                android:weightSum="6">

                <TextView
                    android:fontFamily="@font/adamina"
                    android:id="@+id/single_item_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/rank_number"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_global_unit_normal" />

                <TextView
                    android:fontFamily="@font/adamina"
                    android:id="@+id/single_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:maxLines="1"
                    android:text="@string/team_Name"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_global_unit_normal" />

                <TextView
                    android:fontFamily="@font/adamina"
                    android:id="@+id/single_item_match"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/nr_matches"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_global_unit_normal" />

                <TextView
                    android:fontFamily="@font/adamina"
                    android:id="@+id/single_item_goals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:text="@string/goals"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_global_unit_normal" />

                <TextView
                    android:fontFamily="@font/adamina"
                    android:id="@+id/single_item_points"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="@string/points"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_global_unit_normal" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/table_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</FrameLayout>
