<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/match_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/global_unit_smaller_xxxx"
            android:layout_marginLeft="@dimen/global_unit_smaller_xx"
            android:layout_marginRight="@dimen/global_unit_smaller_xx"
            android:layout_marginTop="@dimen/global_unit_smaller_xxxx"
            android:background="?android:selectableItemBackground"
            android:visibility="visible"
            app:cardCornerRadius="@dimen/global_unit_smaller_xxxxxx"
            app:cardElevation="@dimen/global_unit_smaller_xxxxxx">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="?android:attr/actionBarSize"
                    android:background="@android:color/white"
                    android:focusable="true"
                    android:gravity="center_vertical"
                    android:minHeight="?android:attr/actionBarSize"
                    android:orientation="horizontal"
                    android:padding="@dimen/global_unit_normal"
                    android:weightSum="100">

                    <TextView
                        android:fontFamily="@font/adamina"
                        android:id="@+id/team_a"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:maxLines="1"
                        android:text="@string/team_a"
                        android:textSize="@dimen/text_global_unit_smaller" />

                    <TextView
                        android:fontFamily="@font/adamina"
                        android:id="@+id/home_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="24"
                        android:text="@string/goal_home"
                        android:textAlignment="textEnd"
                        android:textSize="@dimen/text_global_unit_smaller" />

                    <TextView
                        android:fontFamily="@font/adamina"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="20"
                        android:text="@string/division_line"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_global_unit_smaller" />

                    <TextView
                        android:fontFamily="@font/adamina"
                        android:id="@+id/away_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="24"
                        android:text="@string/away_result"
                        android:textSize="@dimen/text_global_unit_smaller" />

                    <TextView
                        android:fontFamily="@font/adamina"
                        android:id="@+id/team_b"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="16"
                        android:maxLines="1"
                        android:text="@string/team_a"
                        android:textAlignment="textEnd"
                        android:textSize="@dimen/text_global_unit_smaller" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_expand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:fontFamily="@font/adamina"
                        android:id="@+id/time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/global_unit_normal"
                        android:text="@string/time"
                        android:textAlignment="center" />

                </LinearLayout>
            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>