<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/global_unit_smaller_x">

    <android.support.v7.widget.CardView
        android:id="@+id/single_item_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/global_unit_smaller_xx"
        app:cardBackgroundColor="@color/blue_50"
        app:cardCornerRadius="3dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:id="@+id/player_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/splash_background"
            android:orientation="vertical"
            android:padding="@dimen/global_unit_smaller_xxxx">

            <LinearLayout
                android:id="@+id/youtube_video_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="100"
                android:orientation="horizontal"
                android:padding="@dimen/global_unit_smaller_xxxx"
                android:scaleType="centerCrop">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/player_image"
                    android:layout_width="@dimen/circle_image_view"
                    android:layout_height="@dimen/circle_image_view"
                    android:layout_gravity="center"
                    android:layout_weight="50"
                    android:src="@drawable/ic_launcher_background" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/player_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/global_unit_smaller_x"
                    android:text="@string/player_name"
                    android:textAlignment="center"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/player_position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player_position"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/global_unit_smaller_x"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shirt_number_key"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/shirt_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shirt_number_value"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/global_unit_smaller_x"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/birthday_key"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shirt_number_value"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/global_unit_smaller_x"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nationality_key"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/nationality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shirt_number_value"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/global_unit_smaller_x"
                android:weightSum="2">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/contract_key"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/contract"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/shirt_number_value"
                    android:textAlignment="center"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--<Button-->
                <!--android:id="@+id/single_player_share"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/action_share"-->
                <!--android:theme="@style/PrimaryFlatButton" />-->

                <!--<Button-->
                <!--android:id="@+id/single_item_watch"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="@string/action_explore"-->
                <!--android:theme="@style/PrimaryFlatButton" />-->
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>


</LinearLayout>